--- a/.github/workflows/build-24.10.yml
+++ b/.github/workflows/build-24.10.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
     name: Build ${{ matrix.arch }}
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -47,10 +47,10 @@ jobs:
         run: |
           case "${{ matrix.arch }}" in
             aarch64_generic)
-              TARGET_URL="https://downloads.openwrt.org/releases/24.10.1/targets/rockchip/armv8/"
+              TARGET_URL="https://downloads.openwrt.org/releases/24.10.2/targets/rockchip/armv8/"
               ;;
             x86_64)
-              TARGET_URL="https://downloads.openwrt.org/releases/24.10.1/targets/x86/64/"
+              TARGET_URL="https://downloads.openwrt.org/releases/24.10.2/targets/x86/64/"
               ;;
           esac
 
